[gd_scene load_steps=11 format=2]

[ext_resource path="res://Angel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Devil.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=3]
[ext_resource path="res://Assets/RETRO_SPACE_INV.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=5]
[ext_resource path="res://Assets/SFX/FallSplat.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/SFX/SoftNope.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/Good.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Level" type="Node2D" parent="."]
position = Vector2( 170, -4 )
script = ExtResource( 3 )

[node name="Angel" parent="." instance=ExtResource( 1 )]
z_as_relative = false

[node name="Devil" parent="." instance=ExtResource( 2 )]

[node name="hud_level" type="RichTextLabel" parent="."]
margin_left = 7.0
margin_top = 9.0
margin_right = 137.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0.188235, 0.882353, 0.72549, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Level "
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move Counter" type="Label" parent="."]
margin_left = 27.0
margin_top = 273.0
margin_right = 85.0
margin_bottom = 287.0
text = "Moves: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bounds" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 319, 6 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 319, 352 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 143, 177 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 493, 177 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Button" type="Button" parent="."]
self_modulate = Color( 0.909804, 0.231373, 0.231373, 1 )
margin_left = 12.0
margin_top = 295.0
margin_right = 124.0
margin_bottom = 315.0
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
self_modulate = Color( 0.643137, 0.701961, 0.129412, 1 )
margin_left = 12.0
margin_top = 320.0
margin_right = 124.0
margin_bottom = 340.0
text = "Exit To Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 111.0
margin_top = 1.0
margin_right = 508.0
margin_bottom = 346.0
rect_pivot_offset = Vector2( -374, 182 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_right = 397.0
margin_bottom = 345.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelName" type="RichTextLabel" parent="VBoxContainer/Panel"]
margin_right = 397.0
margin_bottom = 15.0
custom_colors/default_color = Color( 0.188235, 0.882353, 0.72549, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Level Summary[/center]"
text = "Level Summary"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FallSplat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 6.0

[node name="NopeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -6.0

[node name="Good" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -6.0

[connection signal="level_initialized" from="Level" to="." method="_on_Level_level_initialized"]
[connection signal="game_over" from="Angel" to="." method="game_over"]
[connection signal="stop_input" from="Angel" to="." method="stop_input"]
[connection signal="game_over" from="Devil" to="." method="game_over"]
[connection signal="stop_input" from="Devil" to="." method="stop_input"]
[connection signal="body_entered" from="Bounds" to="." method="_on_Bounds_body_entered"]
[connection signal="pressed" from="Button" to="." method="_reset_level"]
[connection signal="pressed" from="Button2" to="." method="_on_exittomenu_pressed"]
